--- a/AboutMe.html
+++ b/AboutMe.html
@@ -33,33 +33,31 @@
         <div class="row">
             <div class="col-3">
                 <img src="Zawa.jpg" alt="Portait of Zawadi Esube" width="300px">
-            </div>
-            <div class="col-3">
-                <h5>Who Am I?</h5>
+                 <h5>Who Am I?</h5>
                 <br>
                 <p>
                     Hello, my name is Zawadi Esùbe, and I am on a journey of self-discovery and personal growth.<br>
-                    My last name can be challenging to pronounce, but I’m happy to help you with it: it’s pronounced E-sÙ-Be.
-                    <br>
+                    My last name can be challenging to pronounce, but I’m happy to help you with it: it’s pronounced E-sÙ-Be.<br>
+
                     I am currently pursuing my associate’s degree at Ivy Tech Community College.<br>
                     As I navigate this journey, I am exploring the exciting world of technology,<br>
-                    increasing my technical skills while developing my personal abilities. 
-                    <br>
+                    increasing my technical skills while developing my personal abilities.<br> 
+
                     Aside from school, I spend time working as an Amazon Associate at <br>
                     Amazon Fulfillment Center while also being involved with my church choir.<br>
                     My job holds significant value for me because it has enhanced my communication<br> 
                     skills and taught me to appreciate other perspectives, which will not only benefit<br>
-                    me in my professional life but in my personal life as well.
-                    <br>
+                    me in my professional life but in my personal life as well.<br>
+
                     Apart from work, my hobbies include cooking and learning new things.<br>
                     I focus on acquiring skills that will benefit my career or that are<br>
                     valuable for personal development. I am currently learning to code.
 
                 </p>
+            </div>
                 <br>
                 <a href="index.html" class="btn">Home &#8594</a>
                 <br>
-
             </div>
         </div>
     </div>
@@ -91,6 +89,7 @@
     </div>
 </body>
 </html>
+
 
 
 
