--- a/AboutMe.html
+++ b/AboutMe.html
@@ -32,8 +32,7 @@
         <h2 class="title">About Me</h2>
         <div class="row">
             <div class="col-3">
-                <img src="Zawa.jpg" alt="Portait of Zawadi Esube" width="300px">
-                 <h5>Who Am I?</h5>
+                <h5>Who Am I?</h5>
                 <br>
                 <p>
                     Hello, my name is Zawadi Esùbe, and I am on a journey of self-discovery and personal growth.<br>
@@ -54,6 +53,9 @@
                     valuable for personal development. I am currently learning to code.
 
                 </p>
+            </div>
+            <div class="col-3">
+                <img src="Zawa.jpg" alt="Portait of Zawadi Esube" width="300px">
             </div>
                 <br>
                 <a href="index.html" class="btn">Home &#8594</a>
@@ -89,6 +91,7 @@
     </div>
 </body>
 </html>
+
 
 
 
