Fix HTML formatting and structure in Education.html

--- a/Education.html
+++ b/Education.html
@@ -65,10 +65,10 @@
                 Throughout my academic journey, I’ve engaged in hands-on projects that have <br>
                 strengthened my technical skills and deepened my understanding of software development. <br>
                 These experiences reflect my ability to work independently and collaboratively while <br>
-                applying classroom knowledge to real-world scenarios.
-                <br>
+                applying classroom knowledge to real-world scenarios.<br>
 
                 <strong>Project Highlights</strong><br>
+                
                 <ul>Online Bookstore Data Structuring (May 2025)</ul><br>
                 • Used Oracle Apex, Excel, and Notepad++<br>
                 • Created JSON and XML files for semi-structured data<br>
@@ -122,6 +122,7 @@
     </div>
 </body>
 </html>
+
 
 
 
