Fix HTML encoding issues in Education.html

--- a/Education.html
+++ b/Education.html
@@ -51,6 +51,7 @@
                 &#10003; team building and collaboration <br>
                 &#10003; flexibility/adaptability <br>
                 &#10003; solid communication
+                <br>
             </p> 
         </div>
         <br>
@@ -67,8 +68,7 @@
                 These experiences reflect my ability to work independently and collaboratively while <br>
                 applying classroom knowledge to real-world scenarios.<br>
 
-                <strong>Project Highlights</strong><br>
-                <br>
+                <br><strong>Project Highlights</strong><br>
                 <ul>Online Bookstore Data Structuring (May 2025)</ul><br>
                 • Used Oracle Apex, Excel, and Notepad++<br>
                 • Created JSON and XML files for semi-structured data<br>
@@ -122,6 +122,7 @@
     </div>
 </body>
 </html>
+
 
 
 
