Fix HTML encoding issues in Education.html

--- a/Education.html
+++ b/Education.html
@@ -66,8 +66,8 @@
             These experiences reflect my ability to work independently and collaboratively while <br>
             applying classroom knowledge to real-world scenarios.<br>
 
-            <br><strong>Project Highlights</strong><br>
-            <ul>Online Bookstore Data Structuring (May 2025)</ul><br>
+            <strong>Project Highlights</strong><br>
+            <u>Online Bookstore Data Structuring (May 2025)</u><br>
             • Used Oracle Apex, Excel, and Notepad++<br>
             • Created JSON and XML files for semi-structured data<br>
             • Earned a 100% grade<br>
@@ -120,6 +120,7 @@
     </div>
 </body>
 </html>
+
 
 
 
