--- a/AboutMe.html
+++ b/AboutMe.html
@@ -32,7 +32,9 @@
         <h2 class="title">About Me</h2>
         <div class="row">
             <div class="col-3">
-                 <img src="Zawa.jpg" alt="Portait of Zawadi Esube" width="300px">
+                <img src="Zawa.jpg" alt="Portait of Zawadi Esube" width="300px">
+            </div>
+            <div class="col-3">
                 <h5>Who Am I?</h5>
                 <br>
                 <p>
@@ -88,6 +90,7 @@
     </div>
 </body>
 </html>
+
 
 
 
